--- a/src/component/topBar/TopBar.scss
+++ b/src/component/topBar/TopBar.scss
@@ -14,5 +14,38 @@
         display:flex; 
         align-items: center;
         justify-content: space-between;
+
+        .left{
+
+            display:flex;
+            align-items: center;
+
+            .logo{
+                font-size:40px;
+                font-weight:700;
+                text-decoration: none;
+                color:inherit;
+                margin-right: 40px;
+            }
+            
+            .itemContainer img{
+
+                height: 25px;
+                font-size: 18px;
+                margin-right: 3px;
+
+            }
+
+            .itemContainer{
+                display: flex;
+                align-items: center;
+                margin-left: 30px;
+            }
+
+            span{
+                font-size:15px;
+                font-weight:700;
+            }
+        }
     }
 }
