--- a/src/component/topBar/TopBar.scss
+++ b/src/component/topBar/TopBar.scss
@@ -7,7 +7,8 @@
     color:$mainColor;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 3;
+    transition: all 1s ease;
 
     .wrapper {
         padding:10px 30px;
@@ -45,6 +46,45 @@
             span{
                 font-size:15px;
                 font-weight:700;
+            }
+        }
+
+        .right{
+            .hamburger{
+                width:26px;
+                height:22.5px;
+                display:flex;
+                flex-direction:column;
+                justify-content: space-between;
+                cursor: pointer;
+
+                span{
+                    width: 100%;
+                    height: 3px;
+                    background-color:$mainColor;
+                    transform-origin: left;
+                    transition: all 2s ease;
+                }
+            }
+        }
+    }
+
+    &.active{
+        background-color:$mainColor;
+        color:white;
+        .hamburger{
+            span{
+                &:first-child{
+                    background-color:white;
+                    transform: rotate(50deg);
+                }
+                &:nth-child(2){
+                    opacity: 0;
+                }
+                &:last-child{
+                    background-color:white;
+                    transform: rotate(-50deg);
+                }
             }
         }
     }
