--- a/src/component/intro/Intro.scss
+++ b/src/component/intro/Intro.scss
@@ -1,28 +1,36 @@
-.Intro{
-    background-color: white;
+@import "../../global.scss";
 
+.Intro{
+    // background-color: rgb(146, 160, 189);
+    background-image: url("https://cdn.wallpapersafari.com/40/92/HvIEnr.png");
+    background-size: cover;
+
+    // https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cG9ydGZvbGlvJTIwYmFja2dyb3VuZHxlbnwwfHwwfHw%3D&w=1000&q=80
+ 
     display: flex;
 
     .left{
-        flex:0.5;
+        flex:0.4;
         overflow: hidden;
 
         .imgConatinar{
             width: 700px;
             height: 700px;
             // background-color:crimson;
-            border-radius:20%;
+           border-radius:50%;
+        //    border:1px solid #ccc;
             // margin-left: 20%;
-            display:flex;
+            // display:flex;
             align-items: flex-end;
             justify-content: center;
-            float: right
+            // float: right
 
             img{
-                width: 90%;
-                // margin-top: 15%;
-                // margin-left: 15%;
-                // border-radius:50%;
+                width: 70%;
+                margin-top: 25%;
+                margin-left: 15%;
+                border-radius:50%;
+                opacity: 0.85;
 
             }
         }
@@ -35,7 +43,8 @@
         .wrapper{
             width: 100%;
             height: 100%;
-            padding-left: 20px;
+            // padding-ri: 40px;
+            margin-right: 100px;
             display: flex;
             flex-direction:column;
             justify-content: center;
@@ -44,13 +53,19 @@
 
                 font-size: 60px;
                 margin: 10px 0;
+                color:$mainColor;
             }
             h2{
                 font-size: 35px;
+                color:#0c1923;
             }
             h3{
                 font-size: 30px;
+                color:#0c1923;
 
+            }
+            span{
+                color:#e0830f;
             }
         }
         a{
@@ -58,9 +73,14 @@
             bottom: 10px;
             left: 300px;
 
-            img{
-                width: 45px;
-                animation:arrowBlink 2s infinite;
+            // img{
+            //     width: 45px;
+            // }
+
+            i{
+            color: #000407;
+            animation:arrowBlink 2s infinite;
+
             }
 
             @keyframes arrowBlink {
