--- a/src/component/intro/Intro.scss
+++ b/src/component/intro/Intro.scss
@@ -65,8 +65,15 @@
 
             }
             span{
-                color:#e0830f;
+                // -webkit-text-fill-color: transparent;
+                // background: linear-gradient(270deg, rgb(244, 103, 55) 0%, rgb(148, 93, 214) 100%) text;
+                color: rgb(156, 60, 60);
+            
             }
+
+            
+                
+            
         }
         a{
             position: absolute;
