--- a/src/component/topBar/TopBar.scss
+++ b/src/component/topBar/TopBar.scss
@@ -3,7 +3,7 @@
 .TopBar{
     width: 100%;
     height: 70px;
-    background-color:white;
+    background-color:#a6a6a6;
     color:$mainColor;
     position: fixed;
     top: 0;
@@ -47,7 +47,39 @@
                 font-size:15px;
                 font-weight:700;
             }
+            ul{
+                margin-left: 150px;
+                padding: 0px;
+                list-style: none;
+                font-size:30px;
+                font-weight: 300;
+                color: rgb(255, 255, 255);
+                width: 60%;
+                display:flex;
+              
+        
+                li{
+                   
+                 
+        
+                    
+                    a{
+                        font-size:inherit;
+                        color:black;
+                        text-decoration:none;
+                        margin: 90px;
+                        
+                    }
+        
+                    &:hover{
+                        font-weight: 500;
+                        color:aqua;
+                    }
+                }
+            }
+            
         }
+        
 
         .right{
             .hamburger{
@@ -71,18 +103,18 @@
 
     &.active{
         background-color:$mainColor;
-        color:white;
+        color:#a6a6a6;
         .hamburger{
             span{
                 &:first-child{
-                    background-color:white;
+                    background-color:#a6a6a6;
                     transform: rotate(50deg);
                 }
                 &:nth-child(2){
                     opacity: 0;
                 }
                 &:last-child{
-                    background-color:white;
+                    background-color:#a6a6a6;
                     transform: rotate(-50deg);
                 }
             }
