--- a/src/component/contact/Contact.scss
+++ b/src/component/contact/Contact.scss
@@ -1,3 +1,62 @@
 .contact{
-    background-color: lightblue;
+    background-color: rgb(222, 225, 226);
+    display: flex;
+
+    .left{
+        flex: 1;
+        overflow: hidden;
+
+        img{
+            height: 100%;
+        }
+
+    }
+    .right{
+        flex: 1;
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+        justify-content: center;
+
+        h2{
+            font-size: 30px;
+        }
+
+        form{
+            width: 70%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+
+            input{
+                width: 300px;
+                height: 30px;
+                font-size: 14px;
+            }
+
+            textarea{
+                width: 300px;
+                height: 300px;
+                font-size: 14px;
+              
+            }
+
+            button{
+                width: 150px;
+                height: 30px;
+                color:rgb(175, 175, 175);
+                background-color: crimson;
+                border:none;
+                border-radius: 10px;
+                font-weight: 500;
+                cursor: pointer;
+            }
+            span{
+                color:rgb(0, 59, 0)
+            }
+        }
+
+    }
 }
