--- a/src/component/Technology/Technology.scss
+++ b/src/component/Technology/Technology.scss
@@ -1,9 +1,9 @@
 .Technology{
     background: linear-gradient(to left, #31353f, #8b8888);
     // background: linear-gradient(to left, #e3d5e9, #1f1d1c);
-    p{
+    h1{
         position: relative;
-        bottom: 300px;
+        bottom: 410px;
         margin-left: 30%;
         padding: 20px;
         color: #bcaaaa;
