--- a/src/component/productList/productList.css
+++ b/src/component/productList/productList.css
@@ -5,36 +5,50 @@
     align-items: center;
     text-align: center; 
     background: linear-gradient(to left, #31353f, #8b8888);
-
+    
   }
-/*   
+  .pl p {
+    
+      font-size: 30px;
+      position: absolute;
+      top:2150px;
+      color: rgb(174, 171, 171);
+      font-family: 'Times New Roman', Times, serif;
+
+    
+  }
+  
   .pl-texts {
     width: 65%;
+    position:absolute;
+    top: 1570px;
+
   }
   
   .pl-title {
     font-size: 50px;
     font-weight: 600;
+    color: #bcaaaa;
+    font-family:'Mincho';
   }
   
-  .pl-desc {
-    margin: 20px 0px;
-  } */
+  
   
   .pl-list {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     position: absolute;
-    top: 1750px;
-    margin-left: 90px;
+    top: 1700px;
+    /* margin-left: 90px; */
+    justify-content:center;
     /* margin: 20px; */
-    padding: 10px;
+    /* padding: 10px; */
 
     /* justify-content: space-between; */
   }
   
-  /* @media screen and (max-width: 480px) {
+  @media screen and (max-width: 480px) {
     .pl {
       padding: 10px;
     }
@@ -43,7 +57,8 @@
       width: 100%;
     }
    */
-    /* .pl-desc {
+    .pl-desc {
       display: none;
-    } */
-  /* } */
+    } 
+   
+   }
