--- a/src/component/topBar/TopBar.scss
+++ b/src/component/topBar/TopBar.scss
@@ -2,8 +2,8 @@
 
 .TopBar{
     width: 100%;
-    height: 70px;
-    background-color:#a6a6a6;
+    height: 100px;
+    background-color:#28282a;
     color:$mainColor;
     position: fixed;
     top: 0;
@@ -21,13 +21,15 @@
             display:flex;
             align-items: center;
 
-            .logo{
-                font-size:40px;
-                font-weight:700;
-                text-decoration: none;
-                color:inherit;
-                margin-right: 40px;
-            }
+            
+
+                .logo img{
+                    width: 150px;
+                    height: 75px;
+                    overflow: hidden;
+
+                }
+            
             
             .itemContainer img{
 
@@ -48,13 +50,13 @@
                 font-weight:700;
             }
             ul{
-                margin-left: 150px;
+                margin-left: 500px;
                 padding: 0px;
                 list-style: none;
                 font-size:30px;
                 font-weight: 300;
                 color: rgb(255, 255, 255);
-                width: 60%;
+                width: 100%;
                 display:flex;
               
         
@@ -65,9 +67,9 @@
                     
                     a{
                         font-size:inherit;
-                        color:black;
+                        color:rgb(240, 222, 222);
                         text-decoration:none;
-                        margin: 90px;
+                        margin: 80px;
                         
                     }
         
@@ -93,7 +95,7 @@
                 span{
                     width: 100%;
                     height: 3px;
-                    background-color:$mainColor;
+                    background-color:whitesmoke;
                     transform-origin: left;
                     transition: all 2s ease;
                 }
