--- a/src/component/productList/productList.css
+++ b/src/component/productList/productList.css
@@ -1,7 +1,7 @@
 .pl {
     padding: 0 ;
      display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     align-items: center;
     text-align: center; 
     background: linear-gradient(to left, #31353f, #8b8888);
@@ -14,6 +14,7 @@
       top:2150px;
       color: rgb(174, 171, 171);
       font-family: 'Times New Roman', Times, serif;
+    
 
     
   }
@@ -44,7 +45,7 @@
     justify-content:center;
     /* margin: 20px; */
     /* padding: 10px; */
-
+    overflow: hidden;
     /* justify-content: space-between; */
   }
   
@@ -56,7 +57,7 @@
     .pl-texts {
       width: 100%;
     }
-   */
+   
     .pl-desc {
       display: none;
     } 
