--- a/src/component/contact/Contact.scss
+++ b/src/component/contact/Contact.scss
@@ -1,21 +1,34 @@
 .contact{
-    background: linear-gradient(to left, #31353f, #8b8888);
+background-color: #0F0F0F;
 
     h1{
         position: absolute;
-        top: 310%;
+        top: 335%;
         align-items: center;
         justify-content:center;
-        margin-left: 40%;
+        margin-left: 13%;
+        padding: 20px;
+        color: #a70606;
+       
+        font-size:80px;
+        font-family:'Mincho';
+        
+    }
+    h2{
+        position: absolute;
+        top: 320%;
+        align-items: center;
+        justify-content:center;
+        margin-left: 10%;
         padding: 20px;
         color: #bcaaaa;
        
-        font-size:50px;
+        font-size:70px;
         font-family:'Mincho';
         
     }
 
-    // .left{
+    // .leftC{
     //     flex: 1;
     //     overflow: hidden;
 
@@ -23,8 +36,8 @@
     //         height: 100%;
     //     }
 
-    }
-    .right{
+    // }
+    .rightC{
         flex: 1;
         display: flex;
         flex-direction:column;
@@ -35,64 +48,136 @@
           
     }
 
-    .imgContainar img{
-        height: 600px;
-        width: 400px;
-        margin-left: 350px;
-        border-radius: 15%;
+    .imgContaina {
+        height: 100%;
+        width: 550px;
+        margin-left: 75%;
+       
         opacity: 0.8;
         overflow: hidden;
         position: absolute;
-        top: 320%;
-        transition: transform .7s;
-        cursor: pointer;
+        top: 300%;
+        background-color: #2D2D2D;;
+        // transition: transform .7s;
+        // cursor: pointer;
     }
 
-    .imgContainar img:hover{
-        opacity: 1;
-        transform: scale(1.1);
+    .imgContaina img {
+        // width: 826px;
+        height: 1270px;
+        // margin-right: 80%;
+        // filter: drop-shadow(-1px 5px 4px rgba(0, 0, 0, 0.25));
+
+        filter: drop-shadow(8px 8px 10px gray);
+        // filter: grayscale(100%);
+        // opacity: 0.8;
+        // overflow: hidden;
+        position: absolute;
+        top: 10px;
+        right:65px;
+        // background-color: #31353f;
+        // transition: transform .7s;
+        // cursor: pointer;
+    }
+
+    // .imgContaina img:hover{
+    //     opacity: 1;
+    //     transform: scale(1.1);
      
         
 
-    }
-    //     h2{
-    //         font-size: 30px;
-    //     }
-
-    //     form{
-    //         width: 70%;
-    //         height: 70%;
-    //         display: flex;
-    //         flex-direction: column;
-    //         justify-content: space-around;
-    //         align-items: center;
-
-    //         input{
-    //             width: 300px;
-    //             height: 30px;
-    //             font-size: 14px;
-    //         }
-
-    //         textarea{
-    //             width: 300px;
-    //             height: 300px;
-    //             font-size: 14px;
-              
-    //         }
-
-    //         button{
-    //             width: 150px;
-    //             height: 30px;
-    //             color:rgb(175, 175, 175);
-    //             background-color: crimson;
-    //             border:none;
-    //             border-radius: 10px;
-    //             font-weight: 500;
-    //             cursor: pointer;
-    //         }
-    //         span{
-    //             color:rgb(0, 59, 0)
-    //         }
-    //     }
-
     // }
+
+    .leftC{
+        display: flex;
+        position: absolute;
+        width: 20000px;
+        height: 500px;
+        left: 5%;
+
+        overflow: hidden;
+        top:2500px;
+    }
+
+    .leftC img{
+        width:100%;
+        height: 70%;
+        overflow: hidden;
+        
+        opacity: 0.3;
+        // border: 1px solid #FFFFFF;
+
+    }
+
+        // color: #FFFFFF;
+       .email img{
+            // background-color: #ffffff;
+            width: 50px;
+            position: absolute;
+            top:300px;
+            left: 200px;
+            -webkit-transform: scale(1);
+            transform: scale(1);
+            -webkit-transition: .3s ease-in-out;
+            transition: .3s ease-in-out;
+        }
+        .email img :hover{
+            -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+        }
+    
+    
+    .boo{
+        width: 500px;
+        height: 100px;
+        border-radius: 20%;
+        background-color: aliceblue;
+        opacity: 0.4;
+        position: absolute;
+        top:400px;
+    }
+    
+
+
+        }
+//     //     h2{
+//     //         font-size: 30px;
+//     //     }
+
+//     //     form{
+//     //         width: 70%;
+//     //         height: 70%;
+//     //         display: flex;
+//     //         flex-direction: column;
+//     //         justify-content: space-around;
+//     //         align-items: center;
+
+//     //         input{
+//     //             width: 300px;
+//     //             height: 30px;
+//     //             font-size: 14px;
+//     //         }
+
+//     //         textarea{
+//     //             width: 300px;
+//     //             height: 300px;
+//     //             font-size: 14px;
+              
+//     //         }
+
+//     //         button{
+//     //             width: 150px;
+//     //             height: 30px;
+//     //             color:rgb(175, 175, 175);
+//     //             background-color: crimson;
+//     //             border:none;
+//     //             border-radius: 10px;
+//     //             font-weight: 500;
+//     //             cursor: pointer;
+//     //         }
+//     //         span{
+//     //             color:rgb(0, 59, 0)
+//     //         }
+//     //     }
+
+
