--- a/src/component/topBar/TopBar.scss
+++ b/src/component/topBar/TopBar.scss
@@ -2,8 +2,8 @@
 
 .TopBar{
     width: 100%;
-    height: 100px;
-    background-color:#28282a;
+    height: 80px;
+    background-color:#0F0F0F;
     color:$mainColor;
     position: fixed;
     top: 0;
@@ -21,11 +21,13 @@
             display:flex;
             align-items: center;
 
-            
+            .logo{
+                width: 150px;
+            }
 
                 .logo img{
-                    width: 150px;
-                    height: 75px;
+                    width: 30px;
+                    height: 40px;
                     overflow: hidden;
 
                 }
@@ -35,14 +37,14 @@
 
                 height: 25px;
                 font-size: 18px;
-                margin-right: 3px;
+                // margin-right: px;
 
             }
 
             .itemContainer{
                 display: flex;
                 align-items: center;
-                margin-left: 30px;
+                // margin-left: 30px;
             }
 
             span{
@@ -50,14 +52,21 @@
                 font-weight:700;
             }
             ul{
-                margin-left: 500px;
+                margin-left: 200px;
                 padding: 0px;
                 list-style: none;
-                font-size:30px;
-                font-weight: 300;
+                // font-size:30px;
+                // font-weight: 300;
                 color: rgb(255, 255, 255);
                 width: 100%;
                 display:flex;
+                                        
+                font-family: 'Geometos';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 32px;
+                // line-height: 24px;
+                                        
               
         
                 li{
@@ -67,15 +76,18 @@
                     
                     a{
                         font-size:inherit;
-                        color:rgb(240, 222, 222);
+                        color:#FFFFFF;;
                         text-decoration:none;
-                        margin: 80px;
+                        margin:20px 50px;
+                        // transition: all 2s ease;
                         
                     }
         
                     &:hover{
-                        font-weight: 500;
-                        color:aqua;
+                        // font-weight: 500;
+                        color:rgb(142, 3, 3);
+                        // border-bottom: 1px solid red;
+                       
                     }
                 }
             }
